# ReqLens

./: .gitignore  README.md
ReqLens/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ReqLens/alembic/: env.py
ReqLens/data/demo_projects/university_events/: 01_stakeholder_transcript.txt  02_legacy_srs.md  03_user_stories.md  04_test_cases.md  05_security_policy.md  06_change_request.md
ReqLens/scripts/: export_demo_artifacts.py  ingest_demo_project.py  run_benchmarks.py  run_pipeline.py
ReqLens/src/reqlens/: __init__.py  main.py
ReqLens/src/reqlens/agents/: ambiguity_agent.py  base.py  classification_agent.py  composer_agent.py  consistency_agent.py  dependency_agent.py  elicitation_agent.py  evidence_agent.py  extraction_agent.py  impact_agent.py  orchestrator.py  routes_export.py  traceability_agent.py
ReqLens/src/reqlens/api/: routes_agents.py  routes_benchmarks.py  routes_documents.py  routes_export.py  routes_graph.py  routes_impact.py  routes_projects.py  routes_requirements.py  routes_review.py  routes_versions.py
ReqLens/src/reqlens/config/: __init__.py  logging.py  settings.py
ReqLens/src/reqlens/domain/: enums.py  ids.py  models.py
ReqLens/src/reqlens/evaluation/: __init__.py  dependency_eval.py  hallucination_eval.py  metrics.py  promise_eval.py  reports.py  reqfromsrs_eval.py
ReqLens/src/reqlens/graph_ml/: __init__.py  dataset_builder.py  features.py  predict_edges.py  train_gnn.py
ReqLens/src/reqlens/ingestion/: chunking.py  loaders.py  normalization.py  span_index.py
ReqLens/src/reqlens/llm/: azure_client.py  prompts.py  retry.py  schemas.py  token_budget.py
ReqLens/src/reqlens/services/: benchmark_service.py  document_service.py  export_service.py  project_service.py  requirement_service.py  review_service.py  srs_cache.py
ReqLens/src/reqlens/storage/: db.py  graph_store.py  repositories.py  vector_store.py
ReqLens/src/reqlens/ui/: streamlit_app.py
ReqLens/tests/: conftest.py
ReqLens/tests/integration/: __init__.py  test_full_pipeline_demo_project.py
ReqLens/tests/unit/: __init__.py  test_acceptance_rules.py  test_chunking.py  test_graph_store.py  test_ids.py  test_metrics.py  test_normalization.py  test_requirement_schema.py  test_token_budget.py  test_vector_store.py
ReqLens_dataset_builder/: .env.example  .gitignore  README.md  pyproject.toml
ReqLens_dataset_builder/data/promise/: promise.csv
ReqLens_dataset_builder/outputs/poisoned/: manifest.json
ReqLens_dataset_builder/reqlens_benchmark_builder/: azure_client.py  cli.py  config.py
ReqLens_dataset_builder/reqlens_benchmark_builder/generation/: prompts.py  scenario_brief_builder.py  source_bundle_generator.py
ReqLens_dataset_builder/reqlens_benchmark_builder/loaders/: promise_loader.py  pure_loader.py
ReqLens_dataset_builder/reqlens_benchmark_builder/pipelines/: promise_pipeline.py  pure_pipeline.py
ReqLens_dataset_builder/reqlens_benchmark_builder/poisoning/: pipeline.py  prompts.py  schemas.py  track1_poisoner.py  track2_poisoner.py  writer.py
ReqLens_dataset_builder/reqlens_benchmark_builder/pure/: document_profiler.py  hierarchical_chunker.py  requirement_extractor.py  requirement_merger.py  section_detector.py
ReqLens_dataset_builder/reqlens_benchmark_builder/schemas/: benchmark_models.py
ReqLens_dataset_builder/reqlens_benchmark_builder/validation/: coverage_validator.py  repair.py  unsupported_validator.py
ReqLens_dataset_builder/reqlens_benchmark_builder/writers/: io.py
ReqLens_evaluation/: .env.example  .gitignore  README.md  pyproject.toml
ReqLens_evaluation/outputs/: .gitkeep
ReqLens_evaluation/src/reqlens_eval/: __init__.py  cli.py  config.py
(+185 files in other folders)
