[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqlens-benchmark-builder"
version = "0.1.0"
description = "Standalone benchmark / data-generation builder for PROMISE and PURE datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
reqlens-benchmark-builder = "reqlens_benchmark_builder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["reqlens_benchmark_builder"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
