[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqlens-evaluation"
version = "0.1.0"
description = "Evaluation pipeline for Baseline, ReqInOne v1, and ReqLens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.scripts]
reqlens-eval = "reqlens_eval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reqlens_eval"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
